<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detailedTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/my_font_family"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailedImageView" />

            <TextView
                android:id="@+id/overviewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/my_font_family"
                android:text="@string/overview"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailedTitleTextView" />

            <TextView
                android:id="@+id/overviewTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/my_font_family"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overviewText" />

            <TextView
                android:id="@+id/detailedRelasedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/my_font_family"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.044"
                app:layout_constraintStart_toEndOf="@+id/releasedText"
                app:layout_constraintTop_toBottomOf="@+id/overviewTextView" />

            <TextView
                android:id="@+id/releasedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/my_font_family"
                android:text="@string/relased_on"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/detailedRelasedDate"
                app:layout_constraintStart_toStartOf="parent" />

            <RatingBar
                android:id="@+id/detailedRatingBar"
                style="@android:style/Widget.Holo.Light.RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:isIndicator="true"
                app:layout_constraintStart_toStartOf="@+id/releasedText"
                app:layout_constraintTop_toBottomOf="@+id/detailedRelasedDate"
                tools:ignore="SpeakableTextPresentCheck" />

            <CheckBox
                android:id="@+id/detailedFavoriteCheckbox"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/like_button_background"
                android:button="@null"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.396"
                app:layout_constraintStart_toEndOf="@+id/detailedRatingBar"
                app:layout_constraintTop_toBottomOf="@+id/detailedRelasedDate"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/detailedImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/detailed_poster_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textViewReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:fontFamily="@font/my_font_family"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/reviews_about"
                app:layout_constraintStart_toStartOf="@+id/releasedText"
                app:layout_constraintTop_toBottomOf="@+id/detailedRatingBar" />

            <ListView
                android:id="@+id/reviewsListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:divider="@color/black"
                android:dividerHeight="5dp"
                android:isScrollContainer="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewReviews" />

            <TextView
                android:id="@+id/textViewSimilar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:fontFamily="@font/my_font_family"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/similar_movies"
                app:layout_constraintStart_toStartOf="@+id/textViewReviews"
                app:layout_constraintTop_toBottomOf="@+id/reviewsListView" />

            <ListView
                android:id="@+id/similarListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSimilar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>